Updated all the tests.